[project]
name = "pycrafter"
version = "0.0.3"
description = "Text extraction from images using ONNX runtime and CRAFT net"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = [
    "text detection",
    "CRAFT",
    "onnx",
]
authors = [
    { name = "Mike Kroutikov", email = "mkroutikov@innodata.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
    "onnxruntime~=1.14.1",
]
[project.urls]
Homepage = "https://github.com/innodatalabs/crafter"
Source = "https://github.com/innodatalabs/crafter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "crafter/resources/*.onnx",
  "crafter/**/*.py",
]
exclude = [
  "crafter/test/**",
]